--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="skill-main">
                     <div class="skill-left">
-                        <h2>Technical Skills</h2>
+                       <h2 style="margin-left: -170px;">Technical Skills</h2>
                         <div class="skill-bar">
                             <div class="info">
                                 <p>Html</p>
